# eserde

./: .cargo-rdme.toml  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml  general.yml  publish.yml  readme.yml  release-pr.yml
eserde/: Cargo.toml  README.md
eserde/src/: _macro_impl.rs  error.rs  errors.rs  impl_.rs  json.rs  lib.rs  reporter.rs  toml.rs
eserde/src/path/: de.rs  mod.rs  path.rs  path_.rs  tracker.rs  wrap.rs
eserde/tests/: .collections.rs.pending-snap  collections.rs  compile_fail.rs  default.rs  deserialize_with.rs  json_types.rs  std_types.rs  toml.rs
eserde/tests/compile_fail/: default_unimplemented.rs  default_unimplemented.stderr  malformed_serde_deserialize_with.rs  malformed_serde_deserialize_with.stderr  meta_item_attribute_syntax_bad.rs  meta_item_attribute_syntax_bad.stderr  union.rs  union.stderr  unsupported_serde_default.rs  unsupported_serde_default.stderr  unsupported_serde_deserialize_with.rs  unsupported_serde_deserialize_with.stderr
eserde/tests/happy/: deserialize.rs  main.rs  path.rs
eserde/tests/integration/: contract.rs  enum_repr.rs  enums.rs  enums_deny_unknown_fields.rs  enums_flattened.rs  flatten.rs  main.rs  structs.rs
eserde/tests/integration/serialized/: eserde__tests__integration__contract.rs:adjacently_tagged_enum~AdjacentEnum.json  eserde__tests__integration__contract.rs:externally_tagged_enum~ExternalEnum.json  eserde__tests__integration__contract.rs:struct_allow_unknown_fields~StructAllowUnknownFields.json  eserde__tests__integration__contract.rs:struct_deny_unknown_fields~StructDenyUnknownFields.json  eserde__tests__integration__contract.rs:tuple_struct~TupleStruct.json  eserde__tests__integration__enums.rs:adjacently_tagged_enum~Adjacent.json  eserde__tests__integration__enums.rs:externally_tagged_enum~External.json  eserde__tests__integration__enums.rs:internally_tagged_enum~Internal.json  eserde__tests__integration__enums.rs:renamed~Renamed.json  eserde__tests__integration__enums.rs:untagged_enum~UntaggedWrapper.json  eserde__tests__integration__enums_deny_unknown_fields.rs:adjacently_tagged_enum~Adjacent.json  eserde__tests__integration__enums_deny_unknown_fields.rs:externally_tagged_enum~External.json  eserde__tests__integration__enums_deny_unknown_fields.rs:internally_tagged_enum~Internal.json  eserde__tests__integration__enums_flattened.rs:enums_flattened_deny_unknown_fields~ContainerDenyUnknownFields.json  eserde__tests__integration__enums_flattened.rs:enums_flattened~Container.json  eserde__tests__integration__flatten.rs:flattened_map~FlattenMap.json  eserde__tests__integration__flatten.rs:flattened_struct~Deep1.json  eserde__tests__integration__flatten.rs:flattened_value~FlattenValue.json  eserde__tests__integration__structs.rs:deny_unknown_fields~DenyUnknownFields.json  eserde__tests__integration__structs.rs:newtype~NewType.json  eserde__tests__integration__structs.rs:normal~NormalStruct.json  eserde__tests__integration__structs.rs:renamed_fields~RenamedFields.json  eserde__tests__integration__structs.rs:tuple~TupleStruct.json
eserde/tests/integration/snapshots/: eserde__tests__integration__contract.rs:internally_tagged_enum~InternalEnum.snap  eserde__tests__integration__contract.rs:struct_allow_unknown_fields~StructAllowUnknownFields.snap  eserde__tests__integration__contract.rs:struct_deny_unknown_fields~StructDenyUnknownFields.snap  eserde__tests__integration__contract.rs:tuple_struct~TupleStruct.snap  eserde__tests__integration__enum_repr.rs:enum_repr~Enum.snap  eserde__tests__integration__enums.rs:adjacently_tagged_enum~Adjacent.snap  eserde__tests__integration__enums.rs:externally_tagged_enum~External.snap  eserde__tests__integration__enums.rs:internally_tagged_enum~Internal.snap  eserde__tests__integration__enums.rs:renamed~Renamed.snap  eserde__tests__integration__enums.rs:untagged_enum~UntaggedWrapper.snap  eserde__tests__integration__enums_deny_unknown_fields.rs:adjacently_tagged_enum~Adjacent.snap  eserde__tests__integration__enums_deny_unknown_fields.rs:externally_tagged_enum~External.snap  eserde__tests__integration__enums_deny_unknown_fields.rs:internally_tagged_enum~Internal.snap  eserde__tests__integration__enums_flattened.rs:enums_flattened_deny_unknown_fields~ContainerDenyUnknownFields.snap  eserde__tests__integration__enums_flattened.rs:enums_flattened~Container.snap  eserde__tests__integration__flatten.rs:flattened_map~FlattenMap.snap  eserde__tests__integration__flatten.rs:flattened_struct~Deep1.snap  eserde__tests__integration__flatten.rs:flattened_value~FlattenValue.snap  eserde__tests__integration__structs.rs:deny_unknown_fields~DenyUnknownFields.snap  eserde__tests__integration__structs.rs:newtype~NewType.snap  eserde__tests__integration__structs.rs:normal~NormalStruct.snap  eserde__tests__integration__structs.rs:renamed_fields~RenamedFields.snap  eserde__tests__integration__structs.rs:tuple~TupleStruct.snap  eserde__tests__integration__structs.rs:unit~UnitStruct.snap
eserde_axum/: CHANGELOG.md  Cargo.toml
eserde_axum/src/: details.rs  lib.rs
eserde_axum/src/json/: json_.rs  mod.rs  rejections.rs
eserde_derive/: Cargo.toml
eserde_derive/src/: attr.rs  emit.rs  filter_attributes.rs  lib.rs  model.rs  unsupported.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: contract.rs  contract_json.rs  enum_repr.rs  enum_repr_json.rs  enums.rs  enums_deny_unknown_fields.rs  enums_deny_unknown_fields_json.rs  enums_flattened.rs  enums_flattened_json.rs  enums_json.rs  extra.rs  extra_json.rs  flatten.rs  flatten_json.rs  structs.rs  structs_json.rs
fuzz/src/: lib.rs
test_helper/: Cargo.toml
test_helper/src/: contract.rs  enum_repr.rs  enums.rs  enums_deny_unknown_fields.rs  enums_flattened.rs  extra.rs  flatten.rs  json.rs  lib.rs  structs.rs  test_helper.rs
