[workspace]
members = ["eserde_derive", "eserde", "eserde_axum", "fuzz", "test_helper"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/mainmatter/eserde"
license = "Apache-2.0 OR MIT"
version = "0.1.6"

[workspace.dependencies]
arbitrary = "1.4.1"
axum = "0.8"
axum-core = "0.5"
bytes = "1"
eserde = { path = "eserde" }
eserde_test_helper = { path = "test_helper" }
http = "1"
indexmap = "2"
insta = "1.42.1"
itertools = "0.14"
itoa = "1.0"
libfuzzer-sys = "0.4"
mime = { version = "0.3.17" }
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
syn = "2"
tracing = "0.1"
trybuild = "1"
uuid = "1"
toml = "0.8"
