[package]
name = "eserde_derive"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
indexmap = { workspace = true }
