[package]
name = "eserde_test_helper"
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
eserde = { workspace = true, features = ["json"] }
fake = { version = "4", features = ["derive", "chrono", "serde_json"] }
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { version = "0.1.19", default-features = false }
rand = { version = "0.9", default-features = false }
